--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "debug": "~0.7.4",
     "express": "~4.0.0",
     "jade": "~1.3.0",
+    "knex": "^0.14.4",
     "morgan": "~1.0.0",
     "mysql": "^2.15.0",
     "sha256": "^0.2.0",
