--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~0.7.4",
+    "ejs": "^2.5.7",
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "knex": "^0.14.4",
