--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
     "debug": "~0.7.4",
     "ejs": "^2.5.7",
     "express": "~4.0.0",
+    "http-status-code": "^2.1.0",
     "jade": "~1.3.0",
     "knex": "^0.14.4",
     "morgan": "~1.0.0",
