--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.12.0",
     "http-status-code": "^2.1.0",
+    "http-status-codes": "^1.3.0",
     "jade": "~1.3.0",
     "knex": "^0.14.4",
     "mail": "^0.2.3",
