--- a/node/package.json
+++ b/node/package.json
@@ -20,13 +20,15 @@
     "jade": "~1.3.0",
     "knex": "^0.14.4",
     "mail": "^0.2.3",
+    "moment": "^2.21.0",
     "morgan": "~1.0.0",
     "mysql": "^2.15.0",
     "node-session": "^1.2.1",
     "nodemailer": "^4.6.3",
     "serve-favicon": "^2.4.5",
     "sha256": "^0.2.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
