--- a/node/package.json
+++ b/node/package.json
@@ -2,6 +2,11 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
+  "standard": {
+    "globals": [
+      "$"
+    ]
+  },
   "scripts": {
     "start": "nodejs ./bin/www"
   },
