--- a/node/package.json
+++ b/node/package.json
@@ -2,9 +2,21 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
-  "standard": {
+  "standard.options": {
     "globals": [
-      "$"
+      "$",
+      "jQuery",
+      "fetch"
+    ],
+    "ignore": [
+      "node_modules/**"
+    ],
+    "plugins": [
+      "ejs"
+    ],
+    "parser": "babel-eslint",
+    "envs": [
+      "jest"
     ]
   },
   "scripts": {
@@ -16,10 +28,12 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~0.7.4",
-    "ejs": "^2.5.7",
+    "ejs": "^2.5.8",
+    "events": "^2.0.0",
     "express": "~4.0.0",
     "express-session": "^1.15.6",
     "helmet": "^3.12.0",
+    "http": "0.0.0",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^1.3.0",
     "jade": "~1.3.0",
