--- a/node/package.json
+++ b/node/package.json
@@ -2,7 +2,7 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
-  "standard.options": {
+  "standard": {
     "globals": [
       "$",
       "jQuery",
@@ -29,6 +29,7 @@
     "crypto": "^1.0.1",
     "debug": "~0.7.4",
     "ejs": "^2.5.8",
+    "eslint": "^4.19.1",
     "events": "^2.0.0",
     "express": "~4.0.0",
     "express-session": "^1.15.6",
@@ -39,19 +40,19 @@
     "jade": "~1.3.0",
     "knex": "^0.14.4",
     "mail": "^0.2.3",
-    "moment": "^2.21.0",
+    "moment": "^2.22.0",
     "morgan": "~1.0.0",
     "mysql": "^2.15.0",
     "node-session": "^1.2.1",
-    "nodemailer": "^4.6.3",
-    "serve-favicon": "^2.4.5",
+    "nodemailer": "^4.6.4",
+    "serve-favicon": "^2.5.0",
     "sha256": "^0.2.0",
     "static-favicon": "~1.0.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1"
