--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "users-api",
+  "version": "1.0.1",
   "private": true,
   "standard": {
     "globals": [
@@ -31,7 +31,7 @@
     "ejs": "^2.5.8",
     "eslint": "^4.19.1",
     "events": "^2.0.0",
-    "express": "~4.0.0",
+    "express": "^4.0.0",
     "express-session": "^1.15.6",
     "helmet": "^3.12.0",
     "http": "0.0.0",
@@ -41,10 +41,12 @@
     "knex": "^0.14.4",
     "mail": "^0.2.3",
     "moment": "^2.22.0",
+    "mongoose": "^5.0.12",
     "morgan": "~1.0.0",
     "mysql": "^2.15.0",
     "node-session": "^1.2.1",
     "nodemailer": "^4.6.4",
+    "passport": "^0.4.0",
     "serve-favicon": "^2.5.0",
     "sha256": "^0.2.0",
     "static-favicon": "~1.0.0",
