--- a/node/package.json
+++ b/node/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "DRIVER=mongo MONGO_URL=mongodb://abedmurrar:246805@asaltech-shard-00-00-dwm0n.mongodb.net:27017,asaltech-shard-00-01-dwm0n.mongodb.net:27017,asaltech-shard-00-02-dwm0n.mongodb.net:27017/test?ssl=true&replicaSet=AsalTech-shard-0&authSource=admin nodejs ./bin/www",
-    "start_MYSQL":"DRIVER=mysql node bin/www"
+    "start_MYSQL": "DRIVER=mysql node bin/www"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
@@ -29,8 +29,10 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "eslint": "^4.19.1",
+    "eslint-plugin-ejs": "0.0.2",
     "events": "^2.0.0",
     "express": "^4.0.0",
     "express-session": "^1.15.6",
@@ -60,6 +62,8 @@
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14"
   }
 }
