keep NODE_ENV commented until production

--- a/node/.env
+++ b/node/.env
@@ -1,2 +1,3 @@
 DRIVER=MONGO
 MONGO_URL=mongodb://abedmurrar:246805@asaltech-shard-00-00-dwm0n.mongodb.net:27017,asaltech-shard-00-01-dwm0n.mongodb.net:27017,asaltech-shard-00-02-dwm0n.mongodb.net:27017/test?ssl=true&replicaSet=AsalTech-shard-0&authSource=admin
+# NODE_ENV=production
