--- a/node/package.json
+++ b/node/package.json
@@ -57,6 +57,7 @@
     "serve-favicon": "^2.5.0",
     "sha256": "^0.2.0",
     "static-favicon": "~1.0.0",
+    "underscore": "^1.8.3",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
