--- a/node/package.json
+++ b/node/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "body-parser": "~1.0.0",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.0.1",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
